module for players and songs done

--- a/player/player.html
+++ b/player/player.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <iframe scrolling="no" frameborder="0" allowTransparency="true" id="player"
-        src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=300&height=300&color=ff0000&layout=dark&size=medium&type=tracks&id=3135556&app_id=1"
-        width="300" height="300"></iframe>
+    <section>
+        
+    </section>
     <script src="./player.js"></script>
 </body>
 
