--- a/design/index.html
+++ b/design/index.html
@@ -14,9 +14,9 @@
   <body>
     
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="section section-result">
+        <div class="row d-flex aling-items-center">
+            <div class="col-md-12 col-lg-12 col-sm-12 col-xl-7">
+                <div class="section-result mx-auto">
                   <div class="container">
                     <div class="row">
                       <div class="col-md-6 no-padding ml-3">
@@ -35,12 +35,12 @@
                   </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="section section-search text-center">
+            <div class="col-md-12 col-lg-12 col-sm-12 col-xl-5">
+                <div class="section-search text-center mx-auto">
                     <button class="btn">micro</button>
                     <button class="btn">text</button>
-                    <div class="form-group">
-                        <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="10"></textarea>
+                    <div class="text-container">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
                         <!-- <label for="exampleFormControlTextarea1">Large textarea</label> -->
                     </div>
                 </div>
