--- a/index.html
+++ b/index.html
@@ -1,18 +1,57 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="config.js" defer></script>
-    <script src="index.js" defer></script>
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <form >
-        <input type="text" name="" id="searchFormInput" placeholder="search">
-        <button id="searchForm" >find</button>
-    </form>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+
+    <title>Fuckinator</title>
+  </head>
+  <body>
     
-</body>
+    <div class="container">
+        <div class="row d-flex aling-items-center">
+            <div class="col-md-12 col-lg-12 col-sm-12 col-xl-7">
+                <div class="section-result mx-auto">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-6 no-padding ml-3">
+                        <div class="player">
+                          player
+                        </div>
+                      </div>
+                      <div class="col-md-5 no-padding mx-auto">
+                        <div class="aproving">
+                          <button class="btn">дальше</button>
+                          <button class="btn">закончить</button>
+                          <div class="counter mx-auto text-center"><h3>1/5</h3></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-12 col-sm-12 col-xl-5">
+                <div class="section-search text-center mx-auto">
+                    <button class="btn">micro</button>
+                    <button class="btn">text</button>
+                    <div class="text-container">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                        <!-- <label for="exampleFormControlTextarea1">Large textarea</label> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
