--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body>
     
     <div class="container">
-        <div class="row d-flex aling-items-center">
+        <div class="row">
             <div class="col-md-12 col-lg-7 col-sm-12 col-xl-7 first-column">
                 <div class="section-result mx-auto">
                   <div class="container">
                     <div class="row">
-                      <div class="col-6 no-padding ml-3 align-middle">
+                      <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12">
                           <table class="table table-striped table-borderless table-dark ">
                             <tbody>
                               <tr><th scope="row">1</th><td>Mark</td></tr>
@@ -33,9 +33,8 @@
                             </tbody>
                           </table>
                       </div>
-                      <div class="col-5 no-padding mx-auto">
+                      <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12">
                         <div class="player">
-                          
                           <ul id='resultsList'>
 
                           </ul>
