--- a/index.html
+++ b/index.html
@@ -9,16 +9,88 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+
+  <link rel="stylesheet" href="./public/modal-style.css">
   <link rel="stylesheet" href="./public/style.css">
 
+  <!-- JQ -->
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
+
+    <!-- My scripts -->
   <script src="./source/config.js" defer></script>
   <script src="./source/player/player.js" defer></script>
+  <script src="./source/modal.js" defer></script>
   <script src="./source/index.js" defer></script>
-  <title>Akkk</title>
+  <script type="text/javascript">$('#resultModal').modal({backdrop: 'static',keyboard: false})</script>
+  <title>Me en Da'Bois doin' sum srs shit</title>
 </head>
 
-<body>
 
+<!-- Modal -->
+<!-- <div class="container">
+    <button type="button" class="btn btn-primary mx-auto" onclick="onModalOpen(event)">
+        Ну запусти меня
+    </button>
+</div> -->
+<div class="modal fade  bd-example-modal-sm" id="resultModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="searchModalLabel">Is it your song?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <div id="player"></div>
+                <div class="song-metadata">
+                    <table class="table table-borderless table-sm">
+                        <tr>
+                            <th>Title</th>
+                            <td id="title">songName</td>
+                        </tr>
+                        <tr>
+                            <th>Author</th>
+                            <td id="author">songAuthor</td>
+                        </tr>
+                        <tr>
+                            <th>Song link in deezer</th>
+                            <td><a href="#" id="link">Some link</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <button type="button" class="pink-btn" data-dismiss="modal">Yes</button>
+                        </div>
+                        <div class="col text-right">
+                            <button type="button" class="pink-btn pink-btn-warn" data-dismiss="modal" id = "supposeRejectionButton">No</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Body -->
+<body>
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-lg-7 col-sm-12 col-xl-7 first-column">
@@ -27,27 +99,12 @@
             <div class="row">
               <div class="col-md-6 col-lg-5 col-xl-6 col-sm-12">
                 <table class="table table-striped table-borderless table-dark ">
-                  <tbody>
-                    <tr>
+                  <tbody id="resultsTable">
+                    <!-- <tr>
                       <th scope="row">1</th>
                       <td>Mark</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>Jacob</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Larry</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">4</th>
-                      <td>@twitter</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">5</th>
-                      <td>the Bird</td>
-                    </tr>
+                    </tr> -->
+                    
                   </tbody>
                 </table>
               </div>
@@ -57,9 +114,9 @@
                     не понимаю, зачем это тут
                   </ul> -->
                   <div id="playerContainer">
-                    <iframe scrolling="no" frameborder="0" allowTransparency="true" id="2405728"
+                    <!-- <iframe scrolling="no" frameborder="0" allowTransparency="true" id="2405728"
                     src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=300&height=300&color=ff0000&layout=dark&size=medium&type=tracks&id=${id}&app_id=1"
-                    width="230" height="230"></iframe>
+                    width="230" height="230"></iframe> -->
                     <!-- 230 - значение для дефолтной страницы. 270 для модалки, дефолтное значение функции 270 -->
                   </div>
                 </div>
@@ -67,7 +124,7 @@
             </div>
           </div>
         </div>
-        <div class="alertbox">
+        <div class="alertbox" style="display:none">
           THIS IS ALERTBOX
         </div>
       </div>
@@ -91,18 +148,6 @@
   </div>
 
   <script src="https://kit.fontawesome.com/44e5838acf.js" crossorigin="anonymous"></script>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
