added deezer search and modal a bit fixed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </tr>
                         <tr>
                             <th>Song link in deezer</th>
-                            <td><a href="#" id="link">Some link</a></td>
+                            <td><a href="#" id="link">Here</a></td>
                         </tr>
                     </table>
                 </div>
