removed cross in the corner

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="searchModalLabel">Is it your song?</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <!-- крестик в углу -->
+                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                </button>
+                </button> -->
             </div>
             <div class="modal-body text-center">
                 <div id="player"></div>
