--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <button type="button" class="pink-btn" data-dismiss="modal">Yes</button>
+                            <button type="button" class="pink-btn" data-dismiss="modal" id = "supposeConfirmButton">Yes</button>
                         </div>
                         <div class="col text-right">
-                            <button type="button" class="pink-btn pink-btn-warn" data-dismiss="modal" id = "supposeRejectionButton">No</button>
+                            <button type="button" class="pink-btn pink-btn-warn" data-dismiss="modal" id = "supposeRejectButton">No</button>
                         </div>
                     </div>
                 </div>
