--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <script src="./source/player/player.js" defer></script>
   <script src="./source/audio_api/voice.js" defer></script>
   <script src="./source/modal.js" defer></script>
+  <script src="./source/alert.js" defer></script>
   <script src="./source/index.js" defer></script>
-  <script type="text/javascript">$('#resultModal').modal({backdrop: 'static',keyboard: false})</script>
   <title>Me en Da'Bois doin' sum srs shit</title>
 </head>
 
