--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </tr>
                         <tr>
                             <th>Song link in deezer</th>
-                            <td><a href="#" id="link">Here</a></td>
+                            <td><a href="#" target="_blank" id="link">Here</a></td>
                         </tr>
                     </table>
                 </div>
