--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="./public/modal-style.css">
@@ -16,9 +17,15 @@
     <!-- JQ -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 
     <!-- My scripts -->
@@ -38,7 +45,8 @@
         Ну запусти меня
     </button>
 </div> -->
-<div class="modal fade  bd-example-modal-sm" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+<div class="modal fade  bd-example-modal-sm" id="resultModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -71,10 +79,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <button type="button" class="pink-btn" data-dismiss="modal" id="supposeConfirmButton">Yes</button>
+                            <button type="button" class="pink-btn" data-dismiss="modal"
+                                id="supposeConfirmButton">Yes</button>
                         </div>
                         <div class="col text-right">
-                            <button type="button" class="pink-btn pink-btn-warn" data-dismiss="modal" id="supposeRejectButton">No</button>
+                            <button type="button" class="pink-btn pink-btn-warn" data-dismiss="modal"
+                                id="supposeRejectButton">No</button>
                         </div>
                     </div>
                 </div>
@@ -96,20 +106,18 @@
                                 <table class="table table-striped table-borderless table-dark ">
                                     <tbody id="resultsTable">
                                         <!-- <tr>
-                      <th scope="row">1</th>
-                      <td>Mark</td>
-                    </tr> -->
-
+                                            <th scope="row">1</th>
+                                            <td>Mark</td>
+                                        </tr> -->
                                     </tbody>
                                 </table>
                             </div>
                             <div class="col-md-6 col-lg-7 col-xl-6 col-sm-12 text-center">
                                 <div class="player mx-auto">
-                                    <!-- <ul id='resultsList'>
-                    не понимаю, зачем это тут
-                  </ul> -->
                                     <div id="playerContainer">
-
+                                        <iframe scrolling="no" frameborder="0" allowTransparency="true" id="${id}"
+                                            src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=300&height=300&color=ff0000&layout=dark&size=medium&type=tracks&id=569376&app_id=1"
+                                            width="230" height="230"></iframe>
                                         <!-- 230 - значение для дефолтной страницы. 270 для модалки, дефолтное значение функции 270 -->
                                     </div>
                                 </div>
@@ -132,7 +140,7 @@
                         </div>
                     </div>
                     <div class="text-container">
-                        <textarea class="form-control" id="searchByLyricsInput" rows="10"></textarea>
+                        <textarea class="form-control" id="searchByLyricsInput" rows="6"></textarea>
                         <!-- <label for="exampleFormControlTextarea1">Large textarea</label> -->
                     </div>
                 </div>
@@ -145,7 +153,8 @@
 
 </html>
 
-<div class="modal fade  bd-example-modal-sm" id="victoryModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+<div class="modal fade  bd-example-modal-sm" id="victoryModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -164,14 +173,16 @@
     </div>
 </div>
 
-<div class="modal fade  bd-example-modal-sm" id="loseModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+<div class="modal fade  bd-example-modal-sm" id="loseModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="searchModalLabel">It`s a pity, you lose</h5>
             </div>
             <div class="modal-body px-2">
-                <img src="https://memestatic.fjcdn.com/gifs/Real+sad+cat+hours_5d98ca_7169732.gif" style="width: 100%;" alt="lose gif">
+                <img src="https://memestatic.fjcdn.com/gifs/Real+sad+cat+hours_5d98ca_7169732.gif" style="width: 100%;"
+                    alt="lose gif">
 
             </div>
             <div class="modal-footer ">
@@ -183,7 +194,8 @@
     </div>
 </div>
 
-<div class="modal fade  bd-example-modal-sm" id="songNotFoundModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+<div class="modal fade  bd-example-modal-sm" id="songNotFoundModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content text-center" style="padding: 8px;">
 
@@ -197,18 +209,21 @@
     </div>
 </div>
 
-<div class="modal fade  bd-example-modal-sm recording-modal" id="recordingModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+<div class="modal fade  bd-example-modal-sm recording-modal" id="recordingModal" tabindex="-1" role="dialog"
+    aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header" style="border: none;">
                 <h5 class="modal-title" id="recordingModalLabel">Recording...</h5>
             </div>
             <div id="recording-btn" class="modal-body px-2 text-center" style="height: 168px;" style="border: none;">
-                <button class="btn recording-btn" onclick="alertStopRecording()" id="searchByVoiceButton"><i class="fas fa-microphone"></i></button>
+                <button class="btn recording-btn" onclick="alertStopRecording()" id="searchByVoiceButton"><i
+                        class="fas fa-microphone"></i></button>
             </div>
             <div id="recordingModalFooter" class="modal-footer" style="display: none;">
                 <div class="container mx-auto text-center mb-0 pb-0">
-                    <button type="button" class="pink-btn" onclick="setTimeout(() => toDefault(), 1000)" data-dismiss="modal" id="supposeConfirmButton">Ok</button>
+                    <button type="button" class="pink-btn" onclick="setTimeout(() => toDefault(), 1000)"
+                        data-dismiss="modal" id="supposeConfirmButton">Ok</button>
                 </div>
             </div>
         </div>
