added toast styles and script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="./public/modal-style.css">
     <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="./toast/toast.css">
 
     <!-- JQ -->
     <!-- Optional JavaScript -->
@@ -28,6 +29,8 @@
     <script src="./source/modal.js" defer></script>
     <script src="./source/alert.js" defer></script>
     <script src="./source/index.js" defer></script>
+
+    <script src="./toast/toast.js"></script>
     <title>Me en Da'Bois doin' sum srs shit</title>
 </head>
 
