--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="./source/alert.js" defer></script>
     <script src="./source/index.js" defer></script>
 
-    <script src="./toast/toast.js"></script>
+    <script src="./toast/toast.js" defer></script>
     <title>Me en Da'Bois doin' sum srs shit</title>
 </head>
 
