--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header" style="border: none;">
-                <h5 class="modal-title" id="recordingModalLabel">Recording...</h5>
+                <h5 class="modal-title" id="recordingModalLabel"></h5>
             </div>
             <div id="recording-btn" class="modal-body px-2 text-center" style="height: 168px;" style="border: none;">
                 <button class="btn recording-btn" onclick="alertStopRecording()"><i
