--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <div class="section-search text-center mx-auto">
                     <div class="container-fluid">
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <div id="soundBlock" style="display: none; width: 100%;">
-                                <div class="col-9 text-center">
+                                <div class="col-12 text-center">
                                     <button class="btn micro-btn pink-btn" id="searchByVoiceButton" onclick="alertStartRecording()"><i class="fas fa-microphone" style="font-size: 4em;"></i></button>
                                 </div>
                                 <div class="col-3">
@@ -134,21 +134,23 @@
                                         <textarea placeholder="Enter lyrics or name of song you want to find" class="form-control" id="searchByLyricsInput" rows="6"></textarea>
                                     </div>
                                 </div>
-                                <div class="col-9">
-                                    <button class="btn btn-block" id="searchByLyricsButton">Search by text</button>
-                                </div>
-                                <div class="col-3">
-                                    <button onclick="alertChangeGamemode()" class="btn"><i class="fas fa-arrow-right"></i></button>
+                                <div class="row mt-3">
+                                    <div class="col-9">
+                                        <button class="btn btn-block" id="searchByLyricsButton">Search by text</button>
+                                    </div>
+                                    <div class="col-3">
+                                        <button onclick="alertChangeGamemode()" class="btn"><i class="fas fa-arrow-right"></i></button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- <div class="row">
-                            <div class="col-9">
+                        <div class="row">
+                            <div class="col-12">
                                 <div id="soundBlock" class="text-center" style="display: none; width: 100%;">
                                     <button class="btn micro-btn pink-btn" id="searchByVoiceButton" onclick="alertStartRecording()"><i class="fas fa-microphone" style="font-size: 4em;"></i></button>
                                 </div>
-                                <div id="textBlock" style="display: none;">
+                                <div id="textBlock" style="display: none; width: 100%;">
                                     <div id="text-container">
                                         <textarea placeholder="Enter lyrics or name of song you want to find" class="form-control" id="searchByLyricsInput" rows="6"></textarea>
                                     </div>
@@ -160,10 +162,10 @@
                                 <button class="btn btn-block" id="searchByLyricsButton">Search by text</button>
                             </div>
                             <div class="col-3">
-                                <button onclick="alertChangeGamemode()" class="btn" id="searchByLyricsButton"><i class="fas fa-arrow-right"></i>
+                                <button onclick="alertChangeGamemode()" class="btn"><i class="fas fa-arrow-right"></i>
                                 </button>
                             </div>
-                        </div> -->
+                        </div>
 
 
                     </div>
